--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="css/style.css"/>
     </head>
     <body>
-        <h1>MyCloud</h1>
-        <h2>Completed Projects</h2>
+        <h1>My<span>Cloud</span></h1>
+        <h2>Completed Projects:</h2>
         <h3>Contact Us</h3>
     </body>
 </html>
